--- a/src/styles/helpers/shadows.scss
+++ b/src/styles/helpers/shadows.scss
@@ -1,5 +1,5 @@
 .shadow {
-  &--dark-green {
-    box-shadow: 0 2px 4px $c-25-dark-green;
+  &--black {
+    box-shadow: 0 2px 4px $c-black;
   }
 }
