feat: add Link component

--- a/src/components/atoms/Typography/Typography.scss
+++ b/src/components/atoms/Typography/Typography.scss
@@ -27,7 +27,7 @@
 }
 
 @include lineHeight('big');
-@include lineHeight('regular');
+@include lineHeight('normal');
 @include lineHeight('small');
 @include heading();
 
