style: remove Button background, update Modal styles

--- a/src/components/atoms/Button/Button.scss
+++ b/src/components/atoms/Button/Button.scss
@@ -4,6 +4,8 @@
   position: relative;
   flex-direction: row;
   cursor: pointer;
+  background: transparent;
+  border: none;
   border-radius: 8px;
   transition: background-color $transition;
   @include center-content();
