--- a/src/styles/helpers/background.scss
+++ b/src/styles/helpers/background.scss
@@ -7,6 +7,10 @@
     background-color: $c-black;
   }
 
+  &--almost-black {
+    background-color: $c-almost-black;
+  }
+
   &--red {
     background-color: $c-red;
   }
