--- a/plop/component/test.hbs
+++ b/plop/component/test.hbs
@@ -1,5 +1,5 @@
 import React from 'react';
-import { render, screen } from 'testUtils';
+import { render, screen } from '@testing-library/react';
 
 {{#if mock}}
 import { {{properCase name}}DefaultPropsMock } from '../__mock__/mock';
