--- a/src/components/atoms/Button/Button.scss
+++ b/src/components/atoms/Button/Button.scss
@@ -8,7 +8,7 @@
   border: none;
   border-radius: 8px;
   transition: background-color $transition;
-  @include center-content();
+  @include flex-center();
 
   &__content {
     display: flex;
