--- a/src/components/atoms/Modal/Modal.scss
+++ b/src/components/atoms/Modal/Modal.scss
@@ -53,7 +53,7 @@
   background-color: rgba(0, 0, 0, 0.2);
   animation: fade-in $transition 1 forwards;
   backdrop-filter: blur(15px);
-  @include center-content();
+  @include flex-center();
 
   &__content {
     position: relative;
