--- a/src/styles/common/colors.scss
+++ b/src/styles/common/colors.scss
@@ -1,15 +1,15 @@
 /* Base Colors
 ************************************************************** */
 
-$c-white: rgb(255, 255, 255);
-$c-black: rgb(0, 0, 0);
-$c-almost-black: rgb(16, 17, 17);
-$c-red: rgb(255, 101, 107);
-$c-green: rgb(31, 218, 138);
-$c-pastel-blue: rgb(102, 110, 255);
-$c-light-gray: rgb(248, 248, 248);
-$c-gray: rgb(157, 158, 162);
-$c-dark-gray: rgb(40, 41, 41);
+$c-white: rgb(255 255 255);
+$c-black: rgb(0 0 0);
+$c-almost-black: rgb(16 17 17);
+$c-red: rgb(255 101 107);
+$c-green: rgb(31 218 138);
+$c-pastel-blue: rgb(102 110 255);
+$c-light-gray: rgb(248 248 248);
+$c-gray: rgb(157 158 162);
+$c-dark-gray: rgb(40 41 41);
 
 /* Theme Colors
 ************************************************************** */
