--- a/plop/component/Component.hbs
+++ b/plop/component/Component.hbs
@@ -4,6 +4,6 @@ import { {{properCase name}}Props } from './models.d';
 
 import './{{properCase name}}.scss';
 
-const {{properCase name}}: FC<{{properCase name}}Props> = ({  }) => <div data-testid="{{dashCase name}}-item"> </div>;
+const {{properCase name}}: FC<{{properCase name}}Props> = ({  }) => <div className="{{dashCase name}}" data-testid="{{dashCase name}}-item"> </div>;
 
 export default {{properCase name}};
