--- a/src/components/atoms/Button/Button.scss
+++ b/src/components/atoms/Button/Button.scss
@@ -1,14 +1,52 @@
-@import 'styles/component-set.scss';
+@use 'sass:color';
+@import 'styles/component-set';
+
+%outline {
+  transition: opacity $transition, color $transition, background-color $transition;
+
+  &::after {
+    color: inherit;
+    position: absolute;
+    display: inherit;
+    width: calc(100%);
+    height: calc(100%);
+    border-radius: inherit;
+    content: '';
+  }
+}
+
+%solid {
+  position: relative;
+
+  &::after {
+    position: absolute;
+    display: inherit;
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    border-radius: inherit;
+    content: '';
+    opacity: 0;
+    transition: opacity $transition;
+  }
+
+  &:focus,
+  &:active {
+    &::after {
+      opacity: 1;
+    }
+  }
+}
 
 .button {
   position: relative;
   flex-direction: row;
+  padding: 0;
   cursor: pointer;
   background: transparent;
   border: none;
   border-radius: 8px;
   transition: background-color $transition;
-  @include flex-center();
+  @include flex-center;
 
   &__content {
     display: flex;
@@ -18,90 +56,58 @@
   }
 
   &--solid {
-    position: relative;
-
-    &::after {
-      position: absolute;
-      display: inherit;
-      width: calc(100% + 4px);
-      height: calc(100% + 4px);
-      border-radius: inherit;
-      content: '';
-      opacity: 0;
-      transition: opacity $transition;
-    }
-
-    &:focus,
-    &:active {
-      &:after {
-        opacity: 1;
-      }
-    }
-
     &-white {
-      @extend .button--solid;
+      @extend %solid;
 
       color: $c-black;
       background-color: $c-white;
 
       &:hover,
       &:focus {
-        background-color: darken($c-white, 5);
+        background-color: color.adjust($c-white, $lightness: -5%);
       }
 
-      &:after {
-        box-shadow: darken($c-white, 5) 0 0 0 2px;
+      &::after {
+        box-shadow: color.adjust($c-white, $lightness: -5%) 0 0 0 2px;
       }
     }
 
     &-black {
-      @extend .button--solid;
+      @extend %solid;
 
       color: $c-white;
       background-color: $c-black;
 
       &:hover,
       &:focus {
-        background-color: lighten($c-black, 25);
+        background-color: color.adjust($c-black, $lightness: 25%);
       }
 
-      &:after {
-        box-shadow: lighten($c-black, 5) 0 0 0 2px;
+      &::after {
+        box-shadow: color.adjust($c-black, $lightness: 25%) 0 0 0 2px;
       }
     }
 
     &-blue {
-      @extend .button--solid;
+      @extend %solid;
 
       color: $c-white;
       background-color: $c-pastel-blue;
 
       &:hover,
       &:focus {
-        background-color: lighten($c-pastel-blue, 5);
+        background-color: color.adjust($c-pastel-blue, $lightness: 5%);
       }
 
-      &:after {
-        box-shadow: lighten($c-pastel-blue, 5) 0 0 0 2px;
+      &::after {
+        box-shadow: color.adjust($c-pastel-blue, $lightness: 5%) 0 0 0 2px;
       }
     }
   }
 
   &--outline {
-    transition: opacity $transition, color $transition, background-color $transition;
-
-    &::after {
-      color: inherit;
-      position: absolute;
-      display: inherit;
-      width: calc(100%);
-      height: calc(100%);
-      border-radius: inherit;
-      content: '';
-    }
-
     &-white {
-      @extend .button--outline;
+      @extend %outline;
 
       color: $c-black;
       background-color: $c-white;
@@ -118,7 +124,7 @@
     }
 
     &-black {
-      @extend .button--outline;
+      @extend %outline;
 
       color: $c-white;
       background-color: $c-black;
@@ -135,7 +141,7 @@
     }
 
     &-blue {
-      @extend .button--outline;
+      @extend %outline;
 
       color: $c-white;
       background-color: $c-pastel-blue;
@@ -158,7 +164,7 @@
 
       &:hover,
       &:focus {
-        color: darken($c-white, 5);
+        color: color.adjust($c-white, $lightness: -5%);
       }
     }
 
@@ -167,7 +173,7 @@
 
       &:hover,
       &:focus {
-        color: lighten($c-black, 5);
+        color: color.adjust($c-black, $lightness: 5%);
       }
     }
 
@@ -176,7 +182,7 @@
 
       &:hover,
       &:focus {
-        color: lighten($c-pastel-blue, 5);
+        color: color.adjust($c-pastel-blue, $lightness: 5%);
       }
     }
   }
