--- a/src/components/atoms/Modal/Modal.scss
+++ b/src/components/atoms/Modal/Modal.scss
@@ -1,4 +1,5 @@
-@import 'styles/component-set.scss';
+@use 'sass:map';
+@import 'styles/component-set';
 
 @keyframes fade-in {
   0% {
@@ -22,21 +23,21 @@
 
 @keyframes slide-in {
   0% {
-    transform: translateY(150%) rotate(5deg);
+    transform: translateY(100vh);
   }
 
   100% {
-    transform: translateY(0) rotate(0);
+    transform: translateY(0);
   }
 }
 
 @keyframes slide-out {
   0% {
-    transform: translateY(0) rotate(0);
+    transform: translateY(0);
   }
 
   100% {
-    transform: translateY(-150%) rotate(-5deg);
+    transform: translateY(-100vh);
   }
 }
 
@@ -46,22 +47,22 @@
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: map-get($z-index, 'modalOverlay');
+  z-index: map.get($z-index, 'modaloverlay');
   width: 100%;
   padding-top: 20px;
   padding-bottom: 20px;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgb(0 0 0 / 20%);
   animation: fade-in $transition 1 forwards;
   backdrop-filter: blur(15px);
-  @include flex-center();
+  @include flex-center;
 
-  &__content {
+  &__inner {
     position: relative;
-    z-index: map-get($z-index, 'modal');
+    z-index: map.get($z-index, 'modal');
     height: 100%;
     padding: 20px;
     border-radius: 8px;
-    transform: translateY(150%) rotate(5deg);
+    transform: translateY(100vh);
     animation: slide-in $transition * 1.5 $transition 1 cubic-bezier(0.39, 0.8, 0.28, 1.07) forwards;
   }
 
@@ -76,7 +77,7 @@
     animation: fade-out $transition $transition 1 linear forwards;
 
     .modal {
-      &__content {
+      &__inner {
         animation: slide-out $transition * 1.5 ease-out forwards;
       }
     }
