--- a/src/components/atoms/Typography/utils.scss
+++ b/src/components/atoms/Typography/utils.scss
@@ -1,12 +1,11 @@
 // Variables
 
-$lineHeightsMap: (
+$line-heights-map: (
   big: 1.3,
   normal: 1.1,
   small: 0.9,
 );
-
-$paddingsMap: (
+$paddings-map: (
   unset: unset,
   xxs: $gap-xxsmall,
   xs: $gap-xsmall,
@@ -18,49 +17,48 @@ $paddingsMap: (
   xxxl: $gap-xxxlarge,
   huge: $gap-huge,
 );
-
-$fontSizesList: 8, 10, 12, 14, 15, 16, 17, 18, 20, 24, 25, 28, 30, 35, 40, 42, 50, 55, 65;
-
-$sidesList: 'top', 'left', 'bottom', 'right';
-
-$alignsList: 'inherit', 'left', 'center', 'right';
+$font-sizes-list: 8, 10, 12, 14, 15, 16, 17, 18, 20, 24, 25, 28, 30, 35, 40, 42, 50, 55, 65;
+$sides-list: 'top', 'left', 'bottom', 'right';
+$aligns-list: 'inherit', 'left', 'center', 'right';
 
 // Mixins
 
-@mixin lineHeight($size) {
-  .typography--line-height-#{$size} {
-    line-height: map-get($lineHeightsMap, $size);
+@mixin line-height() {
+  @each $line-height, $value in $line-heights-map {
+    .typography--line-height-#{$line-height} {
+      line-height: $value;
+    }
   }
 }
 
 @mixin padding($breakpoint: 'none') {
   @if $breakpoint != 'none' {
-    @each $size, $value in $paddingsMap {
+    @each $size, $value in $paddings-map {
       .typography--padding-#{$breakpoint}-#{$size} {
         @include breakpoint(#{$breakpoint}-up) {
-          padding: map-get($paddingsMap, $size);
+          padding: $value;
         }
       }
     }
-    @each $side in $sidesList {
-      @each $size, $value in $paddingsMap {
+    @each $side in $sides-list {
+      @each $size, $value in $paddings-map {
         .typography--padding-#{$side}-#{$breakpoint}-#{$size} {
           @include breakpoint(#{$breakpoint}-up) {
-            padding-#{$side}: map-get($paddingsMap, $size);
+            padding-#{$side}: $value;
           }
         }
       }
     }
   } @else {
-    @each $size, $value in $paddingsMap {
+    @each $size, $value in $paddings-map {
       .typography--padding-#{$size} {
-        padding: map-get($paddingsMap, $size);
+        padding: $value;
       }
     }
-    @each $side in $sidesList {
-      @each $size, $value in $paddingsMap {
+    @each $side in $sides-list {
+      @each $size, $value in $paddings-map {
         .typography--padding-#{$side}-#{$size} {
-          padding-#{$side}: map-get($paddingsMap, $size);
+          padding-#{$side}: $value;
         }
       }
     }
@@ -68,7 +66,7 @@ $alignsList: 'inherit', 'left', 'center', 'right';
 }
 
 @mixin align($breakpoint: 'none') {
-  @each $align in $alignsList {
+  @each $align in $aligns-list {
     @if $breakpoint != 'none' {
       .typography--align-#{$breakpoint}-#{$align} {
         @include breakpoint(#{$breakpoint}-up) {
@@ -84,7 +82,7 @@ $alignsList: 'inherit', 'left', 'center', 'right';
 }
 
 @mixin size($breakpoint: 'none') {
-  @each $size in $fontSizesList {
+  @each $size in $font-sizes-list {
     @if $breakpoint != 'none' {
       .typography--size-#{$breakpoint}-#{$size} {
         @include breakpoint(#{$breakpoint}-up) {
@@ -94,16 +92,6 @@ $alignsList: 'inherit', 'left', 'center', 'right';
     } @else {
       .typography--size-#{$size} {
         @include font-size($size);
-      }
-    }
-  }
-}
-
-@mixin heading() {
-  @for $i from 1 through 6 {
-    h#{$i} {
-      &.typography {
-        @extend .heading;
       }
     }
   }
