--- a/src/components/atoms/Container/Container.scss
+++ b/src/components/atoms/Container/Container.scss
@@ -1,12 +1,12 @@
 @import 'styles/component-set';
 
 .container {
+  display: flex;
+  justify-content: center;
   width: 100%;
 
   &__inner {
     max-width: $wrapper-default;
-    margin-right: auto;
-    margin-left: auto;
   }
 
   &--fluid {
