--- a/src/components/organisms/Navigation/Navigation.scss
+++ b/src/components/organisms/Navigation/Navigation.scss
@@ -9,6 +9,7 @@ $animated-count: 10;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  width: 100%;
   height: calc(#{$navigation-height} / 2);
   padding-top: calc(#{$navigation-height} / 4);
 
@@ -70,6 +71,26 @@ $animated-count: 10;
           transition: opacity $transition calc(#{$transition} * 2), color $transition,
             background-color $transition;
         }
+      }
+    }
+  }
+
+  &__mobile {
+    width: 100%;
+    height: 100%;
+    max-width: 500px;
+    justify-self: flex-end;
+
+    &-links {
+      display: flex;
+      flex-direction: column;
+      padding-top: 50px;
+    }
+
+    .navigation {
+      &__logo {
+        margin-top: 6px;
+        mix-blend-mode: difference;
       }
     }
   }
