--- a/src/components/organisms/NavigationLogo/NavigationLogo.scss
+++ b/src/components/organisms/NavigationLogo/NavigationLogo.scss
@@ -7,6 +7,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  width: 100%;
   height: calc(#{$navigation-height} / 2);
   margin-bottom: calc(#{$navigation-height} / 2 * -1);
   padding-top: calc(#{$navigation-height} / 4);
