feat: add scroll prevent on modal open

--- a/src/styles/common/global.scss
+++ b/src/styles/common/global.scss
@@ -9,3 +9,9 @@ html {
   background-color: $c-page-background;
   @include font-size(16);
 }
+
+.scroll {
+  &--prevent {
+    overflow: hidden;
+  }
+}
