feat: add Badge common

--- a/src/styles/common/colors.scss
+++ b/src/styles/common/colors.scss
@@ -4,6 +4,7 @@
 $c-white: rgb(255 255 255);
 $c-black: rgb(0 0 0);
 $c-almost-black: rgb(16 17 17);
+$c-orange: rgb(255 171 46);
 $c-red: rgb(255 101 107);
 $c-green: rgb(31 218 138);
 $c-pastel-blue: rgb(102 110 255);
