feat: update plop configuration

--- a/plop/component/index.hbs
+++ b/plop/component/index.hbs
@@ -1,2 +1,3 @@
 export { default } from './{{properCase name}}';
-export * from './models.d';
+{{#if models}}export * from './models.d';{{/if}}
+{{#if mock}}export * from './__mock__/mock';{{/if}}
