--- a/plop/component/mock.hbs
+++ b/plop/component/mock.hbs
@@ -1,3 +1,7 @@
-export const {{properCase name}}DefaultPropsMock = {
+export const {{properCase name}}DefaultClassesMock = ['{{dashCase name}} ', 'test-class'];
 
+export const {{properCase name}}DefaultPropsMock = {
+    className: 'test-class'
 }
+
+export const {{properCase name}}ChildrenMock = 'test content';
