--- a/plop/component/Component.hbs
+++ b/plop/component/Component.hbs
@@ -1,9 +1,13 @@
 import React, { FC } from 'react';
 
+{{#if models}}
 import { {{properCase name}}Props } from './models.d';
+{{/if}}
 
+{{#if styles}}
 import './{{properCase name}}.scss';
+{{/if}}
 
-const {{properCase name}}: FC<{{properCase name}}Props> = ({  }) => <div className="{{dashCase name}}" data-testid="{{dashCase name}}-item"> </div>;
+const {{properCase name}}: FC{{#if models}}<{{properCase name}}Props>{{/if}} = ({  }) => <div className="{{dashCase name}}" data-testid="{{dashCase name}}-item"> </div>;
 
 export default {{properCase name}};
